unpackaged/main/default/objects/pse__Forecast_Setup__c/pse__Forecast_Setup__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedSetupHelp</customHelpPage>
    <description>Contains the information required to configure and run a billing forecast calculation.</description>
    <label>Billing Forecast Setup</label>
    <nameField>
        <displayFormat>FSetup-{0000}</displayFormat>
        <label>Billing Forecast Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>