unpackaged/main/default/objects/pse__Forecast_Setup__c/fields/pse__Actuals_Cutoff_Offset__c.field-meta.xml
<CustomField>
    <fullName>pse__Actuals_Cutoff_Offset__c</fullName>
    <description>Enter the number of days prior to the current date up to which actuals should be included. Enter 0 to use today as the cutoff date. Leave blank to use the default cut off date, which is the end of last week.</description>
    <inlineHelpText>Enter the number of days prior to the current date up to which actuals should be included. Enter 0 to use today as the cutoff date. Leave blank to use the default cut off date, which is the end of last week.</inlineHelpText>
    <label>Actuals Cutoff Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>