unpackaged/main/default/objects/pse__Forecast_Setup__c/fields/pse__Default_Opportunity_Curve__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Opportunity_Curve__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The billing forecast curve applied to an opportunity during a billing forecast calculation if the opportunity does not have a curve assigned to it.</description>
    <inlineHelpText>The billing forecast curve applied to an opportunity during a billing forecast calculation if the opportunity does not have a curve assigned to it.</inlineHelpText>
    <label>Default Opportunity Curve</label>
    <referenceTo>pse__Forecast_Curve__c</referenceTo>
    <relationshipLabel>Billing Forecast Setup Default Opportunity Curve</relationshipLabel>
    <relationshipName>Forecast_Setup_Opportunity_Curve</relationshipName>
    <type>Lookup</type>
</CustomField>