unpackaged/main/default/objects/pse__Forecast_Setup__c/fields/pse__Default_Project_Curve__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Project_Curve__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The billing forecast curve applied to a project during a billing forecast calculation if the project does not have a curve assigned to it.</description>
    <inlineHelpText>The billing forecast curve applied to a project during a billing forecast calculation if the project does not have a curve assigned to it.</inlineHelpText>
    <label>Default Project Curve</label>
    <referenceTo>pse__Forecast_Curve__c</referenceTo>
    <relationshipLabel>Billing Forecast Setup Default Project Curve</relationshipLabel>
    <relationshipName>Forecast_Setup_Project_Curve</relationshipName>
    <type>Lookup</type>
</CustomField>