unpackaged/main/default/objects/pse__Forecast_Setup__c/fields/pse__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes the setup record which will be used for new billing forecast calculations.</description>
    <inlineHelpText>Denotes the setup record which will be used for new billing forecast calculations.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>