unpackaged/main/default/objects/pse__Forecast_Setup__c/fields/pse__Use_Is_Services_Product_On_Opp_Product__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Is_Services_Product_On_Opp_Product__c</fullName>
    <description>If you select Opportunity Product, only opportunity products that have IsServicesProductLine checked are included. If you select Product, only opportunity products that have IsServicesProduct checked on the product itself are included.</description>
    <inlineHelpText>If you select Opportunity Product, only opportunity products that have IsServicesProductLine checked are included. If you select Product, only opportunity products that have IsServicesProduct checked on the product itself are included.</inlineHelpText>
    <label>Use Is Services Product On Opp Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Product</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
                <default>true</default>
                <label>Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>