unpackaged/main/default/objects/pse__Forecast_Setup__c/fields/pse__Use_Opportunity_Curve_For_Products__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Opportunity_Curve_For_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, the opportunity curve is always applied when running a billing forecast calculation.</description>
    <inlineHelpText>If set to true, the opportunity curve is always applied when running a billing forecast calculation.</inlineHelpText>
    <label>Use Opportunity Curve for Products</label>
    <type>Checkbox</type>
</CustomField>